WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59738
Crash under WKPageCreateSnapshotOfVisibleContent if there is no response from the Web Process in the allotted time
https://bugs.webkit.org/show_bug.cgi?id=59738
Summary
Crash under WKPageCreateSnapshotOfVisibleContent if there is no response from...
Jessie Berlin
Reported
2011-04-28 14:23:41 PDT
WebKit::WebImage::WebImage(PassRefPtr<WebKit::ShareableBitmap>) WebKit::WebImage::WebImage(WTF::PassRefPtr<WebKit::ShareableBitmap>) WebKit::WebImage::WebImage(WTF::PassRefPtr<WebKit::ShareableBitmap>) WebKit::WebImage::create(WTF::PassRefPtr<WebKit::ShareableBitmap>) WebKit::WebPageProxy::createSnapshotOfVisibleContent() WKPageCreateSnapshotOfVisibleContent <
rdar://problem/9352192
>
Attachments
Patch
(1.57 KB, patch)
2011-04-28 14:28 PDT
,
Jessie Berlin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jessie Berlin
Comment 1
2011-04-28 14:28:38 PDT
Created
attachment 91557
[details]
Patch
Jessie Berlin
Comment 2
2011-04-28 15:03:41 PDT
Comment on
attachment 91557
[details]
Patch Committed in
http://trac.webkit.org/changeset/85243
WebKit Review Bot
Comment 3
2011-04-28 15:52:41 PDT
http://trac.webkit.org/changeset/85243
might have broken WinCE Release (Build)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug