Crash under WKPageCreateSnapshotOfVisibleContent if there is no response from the Web Process in the allotted time. https://bugs.webkit.org/show_bug.cgi?id=59738

Reviewed by Darin Adler.

If the handle is null, don't try to create a ShareableBitmap and then a WebImage out of it.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::createSnapshotOfVisibleContent):



Canonical link: https://commits.webkit.org/74954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85243 268f45cc-cd09-0410-ab3c-d52691b4dbfc